# ChangeLog for dev-libs/libisoburn
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.91 2012/07/10 15:17:12 ranger Exp $

  10 Jul 2012; Brent Baude <ranger@gentoo.org> libisoburn-1.2.2.ebuild:
  Marking libisoburn-1.2.2 ppc for bug 414159

  15 May 2012; Jeroen Roovers <jer@gentoo.org> libisoburn-1.2.2.ebuild:
  Stable for HPPA (bug #414159).

  06 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libisoburn-1.2.2.ebuild:
  x86 stable wrt bug #414159

  06 May 2012; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.2.0.ebuild:
  Remove old.

  05 May 2012; Markus Meier <maekke@gentoo.org> libisoburn-1.2.2.ebuild:
  arm stable, bug #414159

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> libisoburn-1.0.0.ebuild,
  libisoburn-1.1.8.ebuild, libisoburn-1.2.0.ebuild, libisoburn-1.2.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  01 May 2012; Agostino Sarubbo <ago@gentoo.org> libisoburn-1.2.2.ebuild:
  Stable for amd64, wrt bug #414159

*libisoburn-1.2.2 (07 Apr 2012)

  07 Apr 2012; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.2.2.ebuild:
  Version bump.

  13 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> libisoburn-1.1.8.ebuild:
  ppc/ppc64/x86 stable wrt #400017

  10 Mar 2012; Daniel Pielmeier <billie@gentoo.org> libisoburn-1.2.0.ebuild,
  metadata.xml:
  Introduce cdio use flag now that libcdio-0.83 is available.

  08 Feb 2012; Markus Meier <maekke@gentoo.org> libisoburn-1.1.8.ebuild:
  arm stable, bug #400017

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> libisoburn-1.1.8.ebuild:
  Stable for HPPA (bug #400017).

*libisoburn-1.2.0 (01 Feb 2012)

  01 Feb 2012; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.2.0.ebuild:
  Version bump.

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> libisoburn-1.1.8.ebuild:
  Stable for amd64, wrt bug #400017

  25 Jan 2012; Daniel Pielmeier <billie@gentoo.org> -libisoburn-1.1.6.ebuild:
  Remove old.
