@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST libisoburn-1.0.0.pl00.tar.gz 1038505 SHA256 f067b02fee044da4a69686307900884e18a531a2b4beb316d3978d9d9717884f SHA512 1b3eb2fc12ede9378d77c4c8eec9772d5ba8c4f1af02e4c69fba8df2d9355f305b4f92f5d2f3211c7b5505bfbd1ec965680f24f17d16d30536d47d9bd045a679 WHIRLPOOL fbd97ae78512d37fd37cb1b3e5d10f607a0f3b08412fc2fcb7480c1b9040b6e0666dae18c4e4958614b0ac3dd0de3f0a529d32c360c4bad9f1d09f37d3c61bf9
 DIST libisoburn-1.1.8.tar.gz 1222551 SHA256 97ce56075af43c00b646dc33f8297db005e0201ee077b562ac5f3e3154aeb0c2 SHA512 011f95e2f7932ef94f4251cbcefc04338af5ef92054f8ce0210de6c126fb627995f15037c2daf13c41b42d29756836bd5e3375c266b2d2508fb50c778fd502fb WHIRLPOOL 30df2321f327bbeef8971a5df14776ac8cd421cd96bdfbb31a3c8b26353ad6b107d53d2a0a8700a60b3318f76ca53da4d48e032e3ec97f466b82f03289acbd2f
 DIST libisoburn-1.2.2.tar.gz 1242366 SHA256 b602d84a297cefbc4f611088b79749524058eb7311eaaf90cbbe679285236a68 SHA512 813d65f1373b4a9f69626692ab77b36c4b352bdad27150c9f8bc4c814e925f4ee6b68288158e26b19e51fa27acb8460618e27518d2eb05c148ba2c83a9544f0a WHIRLPOOL 3570a5efb29ea2eb40f0d4877395a9ca2e69aa8e7c9746ef05265f932f999af5b4660c1f69128b8a98dccb52b9645ef229ed759ad6d44a8fd98ef61717ef1cb3
+DIST libisoburn-1.2.4.tar.gz 1279036 SHA256 be5c3adfcf8c32e8489ac77de5842c39cfefd8e994edebabb8353262945a85bf SHA512 379febdaad104cdb020d2fee94da0843f8ae7db497eb4e5fe55cb4da20f88fd07c8ae766767c905abbe7120684a38b2eae7d62169ce00305d4d420204db72390 WHIRLPOOL 07e05f872c7ba7b7546edfe9b18ce44fdbb0d2e0e0d5369ca30c67a116026eb9e17461220035afccbafec3635fd799a6ac99749ad07eb851c435d4ed73025607
 EBUILD libisoburn-1.0.0.ebuild 1852 SHA256 db82be299ba07ebc5ccbc0d120a7644847e4735fbc25b9f8875935a4a5ed4072 SHA512 60e4fa137310f5d01d51cf01ba2e49507a86cad5123b30c31935bd7b04fb00f999d89946a57e45f3dd9754da961108918ec62f654f06b25f6b590a364b093872 WHIRLPOOL 5ec5c08b35289a1edcfd8f5f4b3b36c97d28171274d30e5be8e94d08a2c3c35d7a722e24c3a99ace58d5d110b2b278a0f4b272b0b366c86bdbfcccfda144400d
 EBUILD libisoburn-1.1.8.ebuild 1687 SHA256 96e0251fa2c14c1b0e8dafb6e4147fa9fadcd03eab9824cc485c8587a0bf91f2 SHA512 d4a46cbbec89c97e85974f2b5351290ed7e3a0414a60503a2a7d1fd0f480c761e7f53440f2f4cd6e869b60a4aa3c57f7b1b55704025346d0dd5cb3536262a84c WHIRLPOOL 9826aa6ff4043ba19d05021f72224308dc78e38c928e55079d9cfa562c32dbce1e89143d0591d5c5e954092482da8e467afb9fc833051bf7faeae77073c0007a
 EBUILD libisoburn-1.2.2.ebuild 1497 SHA256 d7c533da176b28c9f59a53eef4abfe416475db170ab5fb9ef640091a795549cf SHA512 85360f76c7de403bbb7e6d5200e19a3a098bca4d2d84691ed57cf99f05aa2d90a404afa66ee1770b4f2d8f633b7bf782b78dfffd2f494e9e3077040020fd5ed5 WHIRLPOOL bdd9da094d92a9ad6d2c95a8bb45e8157d91cac047d40c4b8416bb2edad946aa19163e298c28598d54364f0a778b94bc24a1f614ae62bf4fa0aeeaa21ccc6fbd
-MISC ChangeLog 12717 SHA256 ccb0b1496935019d24313a92c5311f0a37bd8e9eaf955a812a2f8767a2579399 SHA512 1e226fc17e8ca9ad76874357680feb74dd02680edb67960ab2a8eec9dd9d3173f9a1a99f02b69c7e61c43a89b60f4a6a94f96532e2771cebe96e6702ad44b56e WHIRLPOOL 7a592bcdb96bba7b43b31cf6d4d2bf4454daca536b3fefd2088f591d6addcbe16ac1a861a11b3554ccefc55433a64bcfddd6bb9b62f4b3ca41a14790086fe9e9
+EBUILD libisoburn-1.2.4.ebuild 1502 SHA256 816d821c62cc411908536a5b20abec2dc41829d5a1949cc82e6623d9cb0efb70 SHA512 41d13b0d2dd39c8f9f9eda6e21b9923bba343358125b5c6a542adce837b7d40ee7e172b62660b1735877da3191cbfcae9184495305dd3285a49c959a915481dc WHIRLPOOL 332efb0f3268d7a06eecc1218e259a3362a2d690b466881bbc87bc5418de56828ffd58f623de47953aa161ce019bd5e8de4a4d47172cfd72d7de96b6334ae995
+MISC ChangeLog 12845 SHA256 2a5d4d7354e33dce6e73fb5cc210ce5807cebe68d636cc59a29d7e29ddf5a6a6 SHA512 9f63ac5e169d81aecb03e2c079de844adb80d0d75f6641024a385fbdab73467df6505ad4852e9cb8befb3865fafe6b573cae2076252fa4c3fe6273c0f56705c9 WHIRLPOOL 3f30b2fe4b65bf060d808c56dd673c2f5282a8ae1d42c23b7c2ed20a8a0c5a80b639e99c8ccbf1a7ea2471beace3aa73fd7b15b02da59fc93709b125e08ea8cb
 MISC metadata.xml 647 SHA256 31f0b7a90c897903cf84a53291e11a98aa1a5590c2472a8a2f6e9c3d73fdac1a SHA512 a1371aad9d186e8a44fdbdf7681b93cca354ea4fff467d945760a5401abf86a13b9c527f970e73d6afa34a5c80b578ab14597c82f82ed33ff2185dc460eae5e9 WHIRLPOOL eb9f627c8c72a4316a9ab1ebf8fcf1682a396bbbf0bbe42e8c0224b0daa148e635cef763126cfcc53512a0317d2b76cc3372b1ea587c206ee221a0efbaa12de4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlARm40ACgkQlcuUeyFa0U2GygCgzyP1jVMmP8pIRonEdoAHPlRm
+/PoAn3AaWC/Dy9MLrz/ptoUrTMPy9zl2
+=2q+r
+-----END PGP SIGNATURE-----
