@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libisoburn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.91 2012/07/10 15:17:12 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisoburn/ChangeLog,v 1.92 2012/07/26 19:33:27 billie Exp $
+
+*libisoburn-1.2.4 (26 Jul 2012)
+
+  26 Jul 2012; Daniel Pielmeier <billie@gentoo.org> +libisoburn-1.2.4.ebuild:
+  Version bump.
 
   10 Jul 2012; Brent Baude <ranger@gentoo.org> libisoburn-1.2.2.ebuild:
   Marking libisoburn-1.2.2 ppc for bug 414159
